k8s/backend-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-db
  template:
    metadata:
      labels:
        app: backend-db
    spec:
      containers:
        - name: backend-db
          image: gf-svc-poc-backend-db
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: backend-db
spec:
  selector:
    app: backend-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
