k8s/backend-svc-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-svc-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-svc-2
  template:
    metadata:
      labels:
        app: backend-svc-2
    spec:
      containers:
        - name: backend-svc-2
          image: gf-svc-poc-backend-svc
          ports:
            - containerPort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc-2
spec:
  selector:
    app: backend-svc-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30080
