k8s/backend-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-svc
  template:
    metadata:
      labels:
        app: backend-svc
    spec:
      containers:
        - name: backend-svc
          image: gf-svc-poc-backend-svc
          ports:
            - containerPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: NodePort
  selector:
    app: backend-svc
  ports:
    - protocol: TCP
      port: 30000
      targetPort: 30000
      nodePort: 30000
