k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gf-svc-poc-frontend
          ports:
            - containerPort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 30080
      targetPort: 30080
      nodePort: 30080
#  type: LoadBalancer
#  ports:
#    - protocol: TCP
#      port: 30080
#      targetPort: 30080
